--- a/templates/index.html
+++ b/templates/index.html
@@ -3,31 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Web Móvil</title>
+  <title>Graficador de onda</title>
   <link rel="stylesheet" href="../static/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" 
+        crossorigin="anonymous">
 </head>
 <body>
-  <header>
-    <h1>Graficador de Onda</h1>
-    <button id="menu-btn">☰</button>
-  </header>
-  <nav id="menu">
-    <ul>
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#sobre">Sobre</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-    </ul>
-  </nav>
-  <main>
-    <section id="inicio">
-      <h2>Bienvenido</h2>
-      <p>Contenido principal.</p>
-    </section>
-    <!-- más secciones -->
-  </main>
+  <!-- Wrapper que controla ancho y padding -->
+  <div class="wrapper">
+    <header>
+      <h1>Graficador de Onda</h1>
+      <button id="menu-btn">☰</button>
+    </header>
+
+    <nav id="menu">
+      <ul>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
+
+    <main>
+      <section id="inicio">
+        <h2>Bienvenido</h2>
+        <form>
+          <p>Digite los siguientes datos</p>
+          <label for="Frecuencia_Central">Frecuencia central:</label>
+          <input type="text" id="Frecuencia_Central" name="Frecuencia_Central" placeholder="KHz">
+          <label for="Pico_Potencia">Pico de potencia:</label>
+          <input type="text" id="Pico_Potencia" name="Pico_Potencia" placeholder="dBm">
+          <label for="Piso_Ruido">Piso de ruido:</label>
+          <input type="text" id="Piso_Ruido" name="Piso_Ruido" placeholder="dBm">
+          <label for="Ancho_Banda">Ancho de banda:</label>
+          <input type="text" id="Ancho_Banda" name="Ancho_Banda" placeholder="KHz">
+          <input type="submit" class="btn btn-danger" value="Graficar">
+          <input type="reset" class="btn btn-dark" value="Limpiar">
+        </form>
+      </section>
+      <!-- más secciones -->
+    </main>
+  </div>
+
   <footer>
-    <p>© 2025 Mi Web</p>
+    <p>© Hecho por Juan Sebastían &amp; Karen Daniela Alarcón - 2025</p>
   </footer>
+
   <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" 
+          integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" 
+          crossorigin="anonymous"></script>
 </body>
 </html>
