:poop: .-. nada que funciona plotly

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,10 @@
       <h2>Bienvenido</h2>
       <p>Contenido principal.</p>
     </section>
+    <br>
+    <a href="{{ url_for('grafica') }}" class="btn btn-dark mb-3">Generar grafica</a>
+    <a href="{{ url_for('grafica_interactiva') }}" class="btn btn-dark mb-3">Generar grafica Interactiva</a>
+    <a href="{{ url_for('grafica_chartjs') }}" class="btn btn-dark mb-3">Generar grafica chartjs</a>
     <!-- más secciones -->
   </main>
   <footer>
