--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
   </div>
 
   <footer>
-    <p>© Hecho por Jhon Gonzalez, Karen Alarcón &amp; Sebastían A - 2025</p>
+    <p>© Hecho por Karen Alarcón &amp; Sebastían A - 2025</p>
   </footer>
 
   <script src="app.js"></script>
